--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
         timber_version = "4.1.2"
         retrolamda_version = "3.2.5"
         rxjava_version = "1.1.6"
+        rxjava2_version = "2.0.0-RC5"
         rxandroid_version = "1.1.0"
         leak_canary_version = "1.3.1"
         tesseract_version = "3.2.1"
@@ -68,6 +69,7 @@ buildscript {
                      kotlin              : "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version",
                      kotlin_reflect      : "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version",
                      rxjava              : "io.reactivex:rxjava:$rxjava_version",
+                     rxjava2             : "io.reactivex.rxjava2:rxjava:$rxjava2_version",
                      rxandroid           : "io.reactivex:rxandroid:$rxandroid_version",
                      leak_canary         : "com.squareup.leakcanary:leakcanary-android:$leak_canary_version",
                      leak_canary_release : "com.squareup.leakcanary:leakcanary-android-no-op:$leak_canary_version",
