Fiddling with TCI

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ before_install:
   - export JAVA7_HOME=/usr/lib/jvm/java-7-oracle
   - export JAVA8_HOME=/usr/lib/jvm/java-8-oracle
 
+matrix:
+  exclude:
+    - env: JDK=oraclejdk7
+
 cache:
   directories:
     - $HOME/.gradle
