--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ language: java
 jdk:
   - oraclejdk8
 
-before_install:
-  - export JAVA7_HOME=/usr/lib/jvm/java-7-oracle
-  - export JAVA8_HOME=/usr/lib/jvm/java-8-oracle
+env:
+  - JAVA7_HOME=/usr/lib/jvm/java-7-oracle
+  - JAVA8_HOME=/usr/lib/jvm/java-8-oracle
 
 
 cache:
