--- a/rxassertj/build.gradle
+++ b/rxassertj/build.gradle
@@ -1,4 +1,8 @@
 apply plugin: 'java'
+apply plugin: 'me.tatarka.retrolambda'
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 dependencies {
     testCompile(libraries.junit)
