--- a/rx2assertj/build.gradle
+++ b/rx2assertj/build.gradle
@@ -1,6 +1,7 @@
 import org.gradle.internal.os.OperatingSystem;
 
 apply plugin: 'java'
+apply plugin: 'jacoco'
 
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
@@ -16,6 +17,15 @@ test {
         exceptionFormat 'full'
     }
 }
+
+jacocoTestReport {
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }
+}
+
+check.dependsOn jacocoTestReport
 
 /*
 String java8 = getJavaVersion(8)
