--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: java
+sudo: false # faster builds
 
 jdk:
   - oraclejdk8
@@ -7,7 +8,14 @@ before_install:
   - export JAVA7_HOME=/usr/lib/jvm/java-7-oracle
   - export JAVA8_HOME=/usr/lib/jvm/java-8-oracle
   - export JAVA_HOME=/usr/lib/jvm/java-7-oracle
-  
+  - pip install --user codecov
+
+script:
+  - ./gradlew assemble check codeCoverageReport
+
+after_success:
+  - codecov
+
 cache:
   directories:
     - $HOME/.gradle
