--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,11 @@ buildscript {
     ext {
 
         // LIBRARIES
-        rxjava_version = "1.2.2"
+        rxjava_version = "1.2.3"
         rxjava2_version = "2.0.1"
-        retrolamda_version = "3.2.5"
-
 
         // TESTING
         junit_version = "4.12"
-        mockito_version = "2.0.52-beta"
         assertj_version = "2.5.0"
 
         // INFRASTRUCTURE
@@ -17,42 +14,65 @@ buildscript {
 
     ext.libraries = [//LIBRARIES
 
-                     rxjava              : "io.reactivex:rxjava:$rxjava_version",
-                     rxjava2             : "io.reactivex.rxjava2:rxjava:$rxjava2_version",
-                     assertj             : "org.assertj:assertj-core:$assertj_version",
+                     rxjava : "io.reactivex:rxjava:$rxjava_version",
+                     rxjava2: "io.reactivex.rxjava2:rxjava:$rxjava2_version",
+                     assertj: "org.assertj:assertj-core:$assertj_version",
 
                      // TESTING
-                     junit               : "junit:junit:$junit_version",
-                     mockito             : "org.mockito:mockito-core:$mockito_version",
+                     junit  : "junit:junit:$junit_version",
 
     ]
 
+    ext.LIB_VERSION = "0.9.0"
+
     repositories {
         jcenter()
-        mavenCentral()
-        maven { url "https://jitpack.io" }
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
-        maven { url "https://maven.fabric.io/public" }
-        maven { url "http://repository.jetbrains.com/all" }
-
     }
-    dependencies {
-        classpath "me.tatarka:gradle-retrolambda:$retrolamda_version"
 
+    dependencies {
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7'
     }
 }
 
 allprojects {
+    apply plugin: 'java'
+    apply plugin: 'jacoco'
+    apply plugin: 'com.jfrog.bintray'
+
+    sourceCompatibility = 1.6
+    targetCompatibility = 1.6
+
     repositories {
         jcenter()
-        mavenCentral()
-        maven { url "https://jitpack.io" }
-        maven { url "https://maven.fabric.io/public" }
-        maven { url "http://repository.jetbrains.com/all" }
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+    }
+
+    test {
+        testLogging {
+            events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
+            exceptionFormat 'full'
+        }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+task codeCoverageReport(type: JacocoReport) {
+    executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
+
+    subprojects.each {
+        sourceSets it.sourceSets.main
+    }
+
+    reports {
+        xml.enabled true
+        xml.destination "${buildDir}/reports/jacoco/report.xml"
+        html.enabled false
+        csv.enabled false
+    }
+}
+
+codeCoverageReport.dependsOn {
+    subprojects*.test
 }
