--- a/rx2assertj/build.gradle
+++ b/rx2assertj/build.gradle
@@ -9,8 +9,8 @@ bintray {
     user = System.getenv("BINTRAY_USER")
     key = System.getenv("BINTRAY_KEY")
     pkg {
-        repo = 'generic'
-        name = 'rx2assertj'
+        repo = 'Rx2AssertJ'
+        name = 'Rx2AssertJ'
         licenses = ['Apache-2.0']
         vcsUrl = 'https://github.com/nomisRev/RxAssertJ.git'
 
