--- a/rx2assertj/build.gradle
+++ b/rx2assertj/build.gradle
@@ -21,7 +21,7 @@ artifacts {
 
 publishing {
     publications {
-        mavenJava(MavenPublication) {
+        Rx2AssertjPublication(MavenPublication) {
             from components.java
             groupId 'com.github.nomisrev.rxassertj'
             artifactId 'rx2assertj'
